Subida de archivos

--- a/practicas/DWEC/Tema 2. Introducción a JavaScript/foreach.html
+++ b/practicas/DWEC/Tema 2. Introducción a JavaScript/foreach.html
@@ -15,10 +15,12 @@
 	<main>
 		<h2>Foreach</h2>
 
-		<ol id="listaDiaSemana">
+		<h4>Días de la semana</h4>
+			<ol id="listaDiaSemana">
 
 		</ol>
 
+		<h4>Meses del año</h4>
 		<ol id="listaMesesAnio">
 
 		</ol>
