Subida de archivos

--- a/practicas/DWEC/Tema 2. Introducción a JavaScript/Capitulo6/ejercicio14.html
+++ b/practicas/DWEC/Tema 2. Introducción a JavaScript/Capitulo6/ejercicio14.html
@@ -18,7 +18,7 @@
         elit convallis malesuada. Phasellus magna sem, semper quis, faucibus ut, rhoncus non, mi. Duis pellentesque, felis
         eu adipiscing ullamcorper, odio urna consequat arcu, at posuere ante quam non dolor. Lorem ipsum dolor sit amet,
         consectetuer adipiscing elit. Duis scelerisque.</p>
-    <a id="enlace_1" href="#">Ocultar contenidos</a>
+    <a id="enlace_1" href="#" onclick="muestraOculta('1'); return false;">Ocultar contenidos</a>
 
     <br/>
 
@@ -28,7 +28,7 @@
         elit convallis malesuada. Phasellus magna sem, semper quis, faucibus ut, rhoncus non, mi. Duis pellentesque, felis
         eu adipiscing ullamcorper, odio urna consequat arcu, at posuere ante quam non dolor. Lorem ipsum dolor sit amet,
         consectetuer adipiscing elit. Duis scelerisque.</p>
-    <a id="enlace_2" href="#">Ocultar contenidos</a>
+    <a id="enlace_2" href="#" onclick="muestraOculta('2'); return false;">Ocultar contenidos</a>
 
     <br/>
 
@@ -38,7 +38,7 @@
         elit convallis malesuada. Phasellus magna sem, semper quis, faucibus ut, rhoncus non, mi. Duis pellentesque, felis
         eu adipiscing ullamcorper, odio urna consequat arcu, at posuere ante quam non dolor. Lorem ipsum dolor sit amet,
         consectetuer adipiscing elit. Duis scelerisque.</p>
-    <a id="enlace_3" href="#">Ocultar contenidos</a>
+    <a id="enlace_3" href="#" onclick="muestraOculta('3'); return false;">Ocultar contenidos</a>
 
 </body>
 
