--- a/practicas/DWEC/Tema 2. Introducción a JavaScript/Capitulo6/ejercicio15.html
+++ b/practicas/DWEC/Tema 2. Introducción a JavaScript/Capitulo6/ejercicio15.html
@@ -10,7 +10,7 @@
         #info h1 {margin: 0;}
     </style>
         
-    <script type="text/javascript" src="js/ejercicio15.js"></script>
+    <script defer type="text/javascript" src="js/ejercicio15.js"></script>
 </head>
 
 <body>
