--- a/practicas/DWEC/Tema 2. Introducción a JavaScript/Capitulo7/ejercicio17.html
+++ b/practicas/DWEC/Tema 2. Introducción a JavaScript/Capitulo7/ejercicio17.html
@@ -10,7 +10,9 @@
     <script defer src="js/ejercicio17.js"></script>
 </head>
 <body>
+        <noscript>El navegador no soporta javaScript</noscript>
+
         <div id="info">Máximo 100 caracteres</div>
-        <textarea id="texto" onkeypress="return limita(event, 100);" onkeyup="actualizaInfo(100)" rows="6" cols="30"></textarea>
+        <textarea id="texto" rows="6" cols="30"></textarea>
 </body>
 </html>
