Ejercicio café android

--- a/practicas/DIWEB/Tema2/canvas/Practica5/ejercicio2.html
+++ b/practicas/DIWEB/Tema2/canvas/Practica5/ejercicio2.html
@@ -16,7 +16,7 @@
             if (contexto) {
 
                 let img = new Image();
-                img.src = 'tigre.jpeg';
+                img.src = 'imagenes/tigre.jpeg';
                 img.onload = function () {
                     contexto.drawImage(img, 350, 10, 300, 640, 540, 10, 150, 320);
                     contexto.drawImage(img, 20, 10, 300, 640, 10, 10, 150, 320);
