Subida de ejercicios

--- a/practicas/DIWEB/Tema2/Practica6/ejercicio1.html
+++ b/practicas/DIWEB/Tema2/Practica6/ejercicio1.html
@@ -37,63 +37,51 @@
     <main>
         <article class="noticia">
             <h2 class="cabeceraNoticia">Noticia 1</h2>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque
+                libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis
+                incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi
+                corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus
+                suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
+                minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat
+                non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Perspiciatis minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda explicabo
+                dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda
+                explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est ratione,
+                voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem
+                ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque
+                libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis
+                incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi
+                corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus
+                suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
+                minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat
+                non nobis rem, accusamus suscipit perferendis incidunt. Ad?
+            </p>
         </article>
         <article class="noticia">
             <h2 class="cabeceraNoticia">Noticia 2</h2>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est
-            ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt.
-            Ad?
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque
+                libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis
+                incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi
+                corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus
+                suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
+                minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat
+                non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Perspiciatis minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda explicabo
+                dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda
+                explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit
+                amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est ratione,
+                voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem
+                ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque
+                libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis
+                incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi
+                corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus
+                suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
+                minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat
+                non nobis rem, accusamus suscipit perferendis incidunt. Ad?
+            </p>
         </article>
     </main>
 
