--- a/practicas/DIWEB/Tema2/Practica6/ejercicio1.html
+++ b/practicas/DIWEB/Tema2/Practica6/ejercicio1.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Miguel Ángel Gavilán Merino">
 
     <title>Miguel Ángel Gavilán Merino</title>
 
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -37,50 +39,66 @@
     <main>
         <article class="noticia">
             <h2 class="cabeceraNoticia">Noticia 1</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque
-                libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis
-                incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi
-                corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus
-                suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
-                minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat
-                non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Perspiciatis minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda explicabo
-                dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda
-                explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est ratione,
-                voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem
-                ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque
-                libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis
-                incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi
-                corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus
-                suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
-                minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat
-                non nobis rem, accusamus suscipit perferendis incidunt. Ad?
+            <p>Lorem fistrum por la gloria de mi madre se calle ustée a gramenawer ese hombree caballo blanco caballo negroorl
+                pupita ese pedazo de ese hombree de la pradera. Mamaar sexuarl se calle ustée hasta luego Lucas qué dise
+                usteer me cago en tus muelas amatomaa jarl te voy a borrar el cerito. Apetecan ahorarr diodeno la caidita
+                ahorarr te voy a borrar el cerito te va a hasé pupitaa está la cosa muy malar te voy a borrar el cerito diodenoo
+                a wan. No te digo trigo por no llamarte Rodrigor va usté muy cargadoo te voy a borrar el cerito te voy a
+                borrar el cerito a wan a gramenawer. Jarl está la cosa muy malar a peich al ataquerl no te digo trigo por
+                no llamarte Rodrigor te voy a borrar el cerito la caidita a wan diodeno torpedo te va a hasé pupitaa. Por
+                la gloria de mi madre pecador va usté muy cargadoo no puedor de la pradera ese que llega al ataquerl llevame
+                al sircoo ese que llega condemor ahorarr. Llevame al sircoo diodeno tiene musho peligro ese que llega. Al
+                ataquerl quietooor quietooor te va a hasé pupitaa amatomaa diodeno a gramenawer está la cosa muy malar llevame
+                al sircoo. A gramenawer te va a hasé pupitaa benemeritaar hasta luego Lucas caballo blanco caballo negroorl
+                a peich. Llevame al sircoo se calle ustée quietooor mamaar al ataquerl a peich me cago en tus muelas. De
+                la pradera a gramenawer quietooor benemeritaar no puedor ese que llega. Se calle ustée tiene musho peligro
+                me cago en tus muelas llevame al sircoo se calle ustée fistro tiene musho peligro fistro pecador. Te voy
+                a borrar el cerito por la gloria de mi madre a wan a gramenawer hasta luego Lucas sexuarl fistro llevame
+                al sircoo. Ese que llega fistro condemor está la cosa muy malar quietooor benemeritaar no te digo trigo por
+                no llamarte Rodrigor está la cosa muy malar al ataquerl apetecan la caidita. Al ataquerl por la gloria de
+                mi madre la caidita ese hombree por la gloria de mi madre por la gloria de mi madre va usté muy cargadoo
+                te va a hasé pupitaa benemeritaar ahorarr. Papaar papaar la caidita a gramenawer ese hombree diodenoo caballo
+                blanco caballo negroorl. Va usté muy cargadoo me cago en tus muelas me cago en tus muelas caballo blanco
+                caballo negroorl te voy a borrar el cerito mamaar hasta luego Lucas qué dise usteer caballo blanco caballo
+                negroorl de la pradera está la cosa muy malar. Al ataquerl caballo blanco caballo negroorl jarl llevame al
+                sircoo. Te va a hasé pupitaa al ataquerl hasta luego Lucas ese pedazo de. Tiene musho peligro amatomaa caballo
+                blanco caballo negroorl diodeno te voy a borrar el cerito papaar papaar torpedo. Me cago en tus muelas jarl
+                te voy a borrar el cerito ese pedazo de te voy a borrar el cerito condemor fistro no te digo trigo por no
+                llamarte Rodrigor tiene musho peligro torpedo se calle ustée.
+
+
             </p>
         </article>
         <article class="noticia">
             <h2 class="cabeceraNoticia">Noticia 2</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque
-                libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis
-                incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi
-                corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus
-                suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
-                minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat
-                non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Perspiciatis minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda explicabo
-                dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda
-                explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque libero est ratione,
-                voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis incidunt. Ad? Lorem
-                ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi corporis doloremque
-                libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus suscipit perferendis
-                incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis minus sapiente quasi
-                corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat non nobis rem, accusamus
-                suscipit perferendis incidunt. Ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
-                minus sapiente quasi corporis doloremque libero est ratione, voluptatem assumenda explicabo dolor fugiat
-                non nobis rem, accusamus suscipit perferendis incidunt. Ad?
+            <p>Lorem fistrum por la gloria de mi madre se calle ustée a gramenawer ese hombree caballo blanco caballo negroorl
+                pupita ese pedazo de ese hombree de la pradera. Mamaar sexuarl se calle ustée hasta luego Lucas qué dise
+                usteer me cago en tus muelas amatomaa jarl te voy a borrar el cerito. Apetecan ahorarr diodeno la caidita
+                ahorarr te voy a borrar el cerito te va a hasé pupitaa está la cosa muy malar te voy a borrar el cerito diodenoo
+                a wan. No te digo trigo por no llamarte Rodrigor va usté muy cargadoo te voy a borrar el cerito te voy a
+                borrar el cerito a wan a gramenawer. Jarl está la cosa muy malar a peich al ataquerl no te digo trigo por
+                no llamarte Rodrigor te voy a borrar el cerito la caidita a wan diodeno torpedo te va a hasé pupitaa. Por
+                la gloria de mi madre pecador va usté muy cargadoo no puedor de la pradera ese que llega al ataquerl llevame
+                al sircoo ese que llega condemor ahorarr. Llevame al sircoo diodeno tiene musho peligro ese que llega. Al
+                ataquerl quietooor quietooor te va a hasé pupitaa amatomaa diodeno a gramenawer está la cosa muy malar llevame
+                al sircoo. A gramenawer te va a hasé pupitaa benemeritaar hasta luego Lucas caballo blanco caballo negroorl
+                a peich. Llevame al sircoo se calle ustée quietooor mamaar al ataquerl a peich me cago en tus muelas. De
+                la pradera a gramenawer quietooor benemeritaar no puedor ese que llega. Se calle ustée tiene musho peligro
+                me cago en tus muelas llevame al sircoo se calle ustée fistro tiene musho peligro fistro pecador. Te voy
+                a borrar el cerito por la gloria de mi madre a wan a gramenawer hasta luego Lucas sexuarl fistro llevame
+                al sircoo. Ese que llega fistro condemor está la cosa muy malar quietooor benemeritaar no te digo trigo por
+                no llamarte Rodrigor está la cosa muy malar al ataquerl apetecan la caidita. Al ataquerl por la gloria de
+                mi madre la caidita ese hombree por la gloria de mi madre por la gloria de mi madre va usté muy cargadoo
+                te va a hasé pupitaa benemeritaar ahorarr. Papaar papaar la caidita a gramenawer ese hombree diodenoo caballo
+                blanco caballo negroorl. Va usté muy cargadoo me cago en tus muelas me cago en tus muelas caballo blanco
+                caballo negroorl te voy a borrar el cerito mamaar hasta luego Lucas qué dise usteer caballo blanco caballo
+                negroorl de la pradera está la cosa muy malar. Al ataquerl caballo blanco caballo negroorl jarl llevame al
+                sircoo. Te va a hasé pupitaa al ataquerl hasta luego Lucas ese pedazo de. Tiene musho peligro amatomaa caballo
+                blanco caballo negroorl diodeno te voy a borrar el cerito papaar papaar torpedo. Me cago en tus muelas jarl
+                te voy a borrar el cerito ese pedazo de te voy a borrar el cerito condemor fistro no te digo trigo por no
+                llamarte Rodrigor tiene musho peligro torpedo se calle ustée.
+
+
             </p>
         </article>
     </main>
@@ -95,7 +113,7 @@
     </aside>
 
     <footer>
-        <h3>Miguel Ángel Gavilán Merino</h3>
+        <span>Miguel Ángel Gavilán Merino</span>
     </footer>
 </body>
 
